# 3dom

./: .gitignore  .gitmodules  .travis.yml  3DomMain.vcxproj  3DomMain.vcxproj.filters  3dom.rc  3dom.sln  CMakeLists.txt  README.md  WORKSPACE  Zviewer.sln  build.sh  configure  install.sh  resource.h  zview.pro  zview_gui.pro  zview_inf.pro
deploy/: deploy.iss
examples/interface/: CMakeLists.txt  zview_interface_test.cpp
examples/interface_linux/: CMakeLists.txt  zview_inf_test.cpp
examples/interface_msvc/: zview_interface_example.sln
examples/models/: horse.ply
exe/: 3dom.rc
gl/: gl.qrc  horse.stl  mesh.frag  mesh.vert
interface_impl/interface_linux/: CMakeLists.txt  zview_inf_test.cpp
interface_impl/linux/: build.sh  zview_inf_test.cpp
interface_impl/python/: CMakeLists.txt  pyzview.cpp  setup.py  test.py  zview_bindings.cpp
interface_impl/python/zview_pkg/: setup.py
interface_impl/pyzview/: setup.py
interface_impl/windows/: zview_interface_console.cpp  zview_interface_example.vcxproj  zview_interface_example.vcxproj.filters
proj/RSviewer/: RSviewer.rc  RSviewer.vcxproj  RSviewer.vcxproj.filters  main.cpp
proj/Zviewer/: Zviewer.ui  Zviewer.vcxproj  Zviewer.vcxproj.filters  main.cpp
proj/Zviewer/GeneratedFiles/: qrc_shaders.cpp
proj/app_/: 3DomMain.vcxproj  3DomMain.vcxproj.filters  3dom.rc
projFiles/: 3domMain.pro  3domMain.sln  3domMain.vcxproj  3domMain.vcxproj.filters  Circle3d.h  GeomObjs.h  Line3d.h  Similarity.h  TrackMode.cpp  TrackMode.h  TrackUtils.h  Trackball.h  View.h
projFiles/GeneratedFiles/: qrc_gl.cpp  qrc_qt.cpp
projFiles/Q3d/: .gitignore  ALGL.sln  ALGL.vcxproj  ALGL.vcxproj.filters  QCamera3D.cpp  QCamera3D.h  QGLCamera3D.cpp  QGLCamera3D.h  QGLMainWindow.cpp  QGLMainWindow.h  QGeometry3D.cpp  QGeometry3D.h  QLine3D.cpp  QPainter3D.cpp  QPainter3D.h  QPlane3D.cpp  QPlane3D.h  QPrimitive3D.h  QRay3D.cpp  caldlmainwindow.qrc  main.cpp
res/: create_debian_package.sh  create_msi_packge.iss  lineF.glsl  lineV.glsl  meshf.glsl  meshv.glsl  resources.qrc  shaders.qrc  stream.3ds  vshader.glsl  zmeshf.glsl  zmeshv.glsl  zview.desktop
snap/: snapcraft.yaml
src/: App.h  Array2d.h  Backdrop.h  GLpainter.h  IOStream.h  MeasurmentGrid.h  Params.h  Qmvp.h  Shader.h  TrackBall.h  TrackMode.h  TrackStates.h  TrackUtils.h  Trackball.h  VertMap.h  Window.h  Zstream.h  _vertex.h  app.h  backdrop.h  canvas.h  glmesh.h  loader.h  main.cpp  mesh.h  window.h
src/Q3d/: ObjGLpainter.h  QBitFlags.h  QLine3D.h  QPlane3D.h  QPrimitive3D.h  QRay3D.h  QSphere3D.h  QText3D.h
src/RealSense/include/librealsense2/: rs.h
src/RealSense/include/librealsense2/hpp/: rs_frame.hpp
src/RealSense/lib/: realsense2.lib
zview/: BUILD  zview.cpp
zview/backend/: BUILD  vp_mat.cpp  vp_mat.h
zview/backend/shared_memory/: cmd_query_thread.cpp  cmd_query_thread.h  shared_memory_manager.cpp  shared_memory_manager.h
zview/backend/state_machine/: BUILD  state_machine.cpp  state_machine.h  track_state_abs.cpp  track_state_abs.h  track_state_idle.cpp  track_state_idle.h  track_state_measure_distance.cpp  track_state_measure_distance.h  track_state_retarget.cpp  track_state_retarget.h  track_state_rotate.cpp  track_state_rotate.h  track_state_translate.cpp  track_state_translate.h  track_state_zoom.cpp  track_state_zoom.h
zview/backend/tree_model/: BUILD  tree_item.cpp  tree_item.h  tree_model.cpp  tree_model.h  tree_view_signaled.cpp  tree_view_signaled.h
zview/common/: BUILD  common_types.h  mem_stream.h  params.h  vp_mat.cpp  vp_mat.h
zview/common/state_machine/: BUILD  track_state_abs.h  track_state_common.h  track_state_idle.h  track_state_machine.cpp  track_state_machine.h  track_state_rotate.h  track_state_translate.cpp
zview/gui/: BUILD  canvas.cpp  canvas.h  main_window.cpp  main_window.h  zview_main.cpp
zview/gui/drawables/: BUILD  axes.h  backdrop.cpp  backdrop.h  drawable_base.cpp  drawable_base.h  drawable_common.cpp  drawable_common.h  drawable_edges.cpp  drawable_edges.h  drawable_mesh.cpp  drawable_mesh.h  drawable_pcl.cpp  drawable_pcl.h  drawables_buffer.cpp  drawables_buffer.h  grid.cpp  grid.h  picking.cu.cc  picking.cu.h
zview/interface/: zview_inf.cpp  zview_inf.h  zview_inf_impl.cpp  zview_inf_impl.h
zview/io/: BUILD  read_file_list.cpp  read_file_list.h  read_ply.cpp  read_ply.h  read_stl.cpp  write_ply.h  write_shape_to_file.cpp  write_shape_to_file.h
zview/io/file_types/: BUILD  read_obj.cpp  read_obj.h  read_ply.cpp  read_ply.h  read_stl.cpp
zview/io/readers/: BUILD  read_obj.cpp  read_ply.cpp  read_stl.cpp
zview/io/writers/: BUILD  write_ply.h
zview/shaders/: BUILD  fline.glsl  fmesh.glsl  fpoint.glsl  fzmesh.glsl  meshf.glsl  shaders.qrc  vedges.glsl  vline.glsl  vmesh.glsl  vpoint.glsl  vzmesh.glsl
